// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers formReducer should correctly setFormType 1`] = `
Object {
  "formType": "FOO",
}
`;

exports[`reducers formReducer should handle initial state 1`] = `
Object {
  "formType": null,
}
`;
